mmsh: dont close context on seeking failure

Fixes Ticket2581

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit b4579a29c75e2968ede2ad002dd4a495dbfc883d)